--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -98,7 +98,7 @@
                 // end of item box shadows
                 // item headings (h1)
                 h1 {
-                    color: #fff;
+                    color: $span-gold;
                     padding: .2em 1em;
                     margin: .2em auto;
                     font-size: 1.5em;
