--- a/scss/style.scss
+++ b/scss/style.scss
@@ -45,7 +45,6 @@ body {
 
     .header {
         min-height: 10vh;
-        background-color: $overlay-blue-light;
         transition: 1s ease background-color;
 
         #navbar {
@@ -511,7 +510,7 @@ body {
                 position: relative;
                 display: inline-block;
                 text-transform: uppercase;
-                color: $span-gold;
+                color: $text-light;
                 font-size: 2em;
                 font-weight: 700;
                 animation: animate 3s ease-in-out infinite;
