--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -232,7 +232,7 @@
                         padding: .2em .5em;
                         border-radius: 10px;
                         margin: .7em auto;
-                        background-color: $link-crimson-dark;
+                        background: linear-gradient(0deg, #581212, #dc134c);
                         color: $text-white-e;
                         opacity: .8;
                         cursor: pointer;
