--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -218,7 +218,7 @@ hamburger
             height: 100%;
             width: 100%;
             left: 0;
-            background-color: $span-gold;
+            background-color: #f4f4f4;
             transition: 0.3s ease;
             transition-property: top, bottom;
         }
