--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -22,7 +22,8 @@ $span-brand: #f72751;
 $span-violet: violet;
 $span-blue: #0000ff;
 $span-crimson-dark: #dc143c8c;
-$span-orange: tomato ;
+$span-orange: tomato;
+$border: #ead2a15e;
 $trans-border: rgba(255, 255, 255, 0.155);
 // link colors
 $link-gold: #ead2a1;
