--- a/scss/style.scss
+++ b/scss/style.scss
@@ -91,23 +91,24 @@ body {
                         height: 100vh;
                         background-color: $nav-active-background;
                         transition: .5s ease;
-                        overflow-y: auto;
+                        // overflow-y: auto;
 
                         ul {
                             margin: 2em 5vw;
                             background: $overlay-blue-dark;
                             display: flex;
+                            height: auto;
                             flex-direction: column;
                             justify-content: center;
                             align-items: right;
                             border-radius: 5px;
                             z-index: 1;
-                            overflow-x: hidden;
                             transition: 0.5s ease left;
                             position: relative;
-                            border: 2px solid $trans-border;
+                            border: 2px solid $border;
                             outline: none;
                             padding: 1em 0;
+                            overflow-y: auto;
                             // list items active transition
                             li {
                                 transform: translateX(10%);
@@ -124,34 +125,44 @@ body {
                             opacity: 1;
                             transform: translateX(0);
                         }
-                        ul li {
-                            transition: .5s;
-                            transform: translateX(0);
-                            opacity: 1;
-                            i {
-                                transition: 1s ease 1s;
-                                color: $span-gold;
-                            }
 
-                            &:nth-child(1){
-                                transition-delay: .3s;
+                        ul {
+                            overflow-y: scroll;
+                            li {
+                                transition: .5s;
+                                transform: translateX(0);
+                                opacity: 1;
+
+                                i {
+                                    transition: 1s ease 1s;
+                                    color: $span-gold;
+                                }
+
+                                &:nth-child(1) {
+                                    transition-delay: .3s;
+                                }
+
+                                &:nth-child(2) {
+                                    transition-delay: .4s;
+                                }
+
+                                &:nth-child(3) {
+                                    transition-delay: .5s;
+                                }
+
+                                &:nth-child(4) {
+                                    transition-delay: .6s;
+                                }
+
+                                &:nth-child(5) {
+                                    transition-delay: .7s;
+                                }
+
+                                &:nth-child(6) {
+                                    transition-delay: .8s;
+                                }
+
                             }
-                            &:nth-child(2){
-                                transition-delay: .4s;
-                            }
-                            &:nth-child(3){
-                                transition-delay: .5s;
-                            }
-                            &:nth-child(4){
-                                transition-delay: .6s;
-                            }
-                            &:nth-child(5){
-                                transition-delay: .7s;
-                            }
-                            &:nth-child(6){
-                                transition-delay: .8s;
-                            }
-                            
                         }
                     }
                     // end of active mobile  navbar
@@ -170,17 +181,24 @@ body {
                         height: 15%;
                         width: 40%;
                         border-radius: 5px;
-                        overflow: hidden;
                         position: sticky;
                         top: 1em;
                         transform: translateX(50%);
                         transition: 1s ease;
+                        outline: none;
+                        overflow: hidden;
+                        border: 2px solid $border;
                     
-
                         img {
                             width: 100%;
                             height: 100%;
                             object-fit: cover;
+                            border-radius: 5px;
+                        }
+
+                        // nav-logo hover state 
+                        &:hover {
+                            background-color: $overlay-blue-darker;
                         }
                     }
 
