--- a/scss/style.scss
+++ b/scss/style.scss
@@ -105,7 +105,7 @@ body {
                             z-index: 1;
                             transition: 0.5s ease left;
                             position: relative;
-                            border: 2px solid $border;
+                            border: 2px solid $trans-border;
                             outline: none;
                             padding: 1em 0;
                             overflow-y: auto;
