cta header transition

--- a/css/style.css
+++ b/css/style.css
@@ -1499,8 +1499,7 @@ body {
             position: relative;
             border: 2px solid rgba(255, 255, 255, 0.155);
             outline: none;
-            padding: 1em 0;
-            overflow-y: auto; }
+            padding: 1em 0; }
             #header .header #navbar .nav-list .links-container ul li {
               transform: translateX(10%);
               opacity: 0;
@@ -1512,7 +1511,8 @@ body {
           opacity: 1;
           transform: translateX(0); }
         #header .header #navbar .nav-list .links-container.active ul {
-          overflow-y: scroll; }
+          overflow-y: auto;
+          overflow-x: hidden; }
           #header .header #navbar .nav-list .links-container.active ul li {
             transition: .5s;
             transform: translateX(0);
@@ -1715,12 +1715,14 @@ body {
     text-align: center;
     font-family: 'Gruppo', cursive;
     padding: .5em 1em;
-    margin: 2em 0;
+    margin: 0;
     width: 100%;
     border-radius: 20px;
     border: none;
     outline: none;
-    opacity: 0;
+    opacity: 1;
+    transform: rotateX(-90deg);
+    transform-style: preserve-3d;
     animation: show-cta 4s 5.5s;
     animation-fill-mode: forwards;
     transition: .3s linear;
@@ -1733,7 +1735,8 @@ body {
 
 @keyframes show-cta {
   100% {
-    opacity: 1; } }
+    opacity: 1;
+    transform: rotateX(0) translateY(5%); } }
     #home .hero #cta-header::before, #home .hero #cta-header::after {
       position: absolute;
       content: '';
